legend-pure-rust/crates/parser/tests/snapshots/test_measure__quoted.snap
---
source: crates/parser/tests/test_measure.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Measure(
                    MeasureDef {
                        package: Some(
                            Package {
                                name: "pkg",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 9,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "'some measure'",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 9,
                                end_line: 2,
                                end_column: 11,
                            },
                        },
                        canonical_unit: Some(
                            UnitDef {
                                name: "'Unit One'",
                                conversion_param: Some(
                                    "x",
                                ),
                                conversion_body: Some(
                                    Variable(
                                        Variable {
                                            name: "x",
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 4,
                                                start_column: 23,
                                                end_line: 4,
                                                end_column: 23,
                                            },
                                        },
                                    ),
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 4,
                                    start_column: 6,
                                    end_line: 4,
                                    end_column: 15,
                                },
                            },
                        ),
                        non_canonical_units: [
                            UnitDef {
                                name: "'Unit Two'",
                                conversion_param: Some(
                                    "x",
                                ),
                                conversion_body: Some(
                                    Arithmetic(
                                        ArithmeticExpr {
                                            left: Variable(
                                                Variable {
                                                    name: "x",
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 22,
                                                        end_line: 5,
                                                        end_column: 22,
                                                    },
                                                },
                                            ),
                                            op: Times,
                                            right: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        value: 1000,
                                                        source_info: SourceInfo {
                                                            source: "test.pure",
                                                            start_line: 5,
                                                            start_column: 27,
                                                            end_line: 5,
                                                            end_column: 30,
                                                        },
                                                    },
                                                ),
                                            ),
                                            source_info: SourceInfo {
                                                source: "test.pure",
                                                start_line: 5,
                                                start_column: 25,
                                                end_line: 5,
                                                end_column: 25,
                                            },
                                        },
                                    ),
                                ),
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 5,
                                    start_column: 5,
                                    end_line: 5,
                                    end_column: 14,
                                },
                            },
                        ],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 2,
                            end_column: 7,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
